# trtllm-serve

./: .gitignore  README.md  flake.nix  session-ses_3f4a.md  tooling-benefit-testamonial.md
.opencode/: index.ts  package.json
lib/: Attestation.hs  CodeSandbox.hs
nix/: haskell-overlay.nix  models.nix  openai-proxy-hs.nix  openai-proxy.nix  tool-server.nix  trtllm-engine.nix  trtllm-serve.nix  trtllm-validate.nix
nix/modules/: triton-trtllm.nix  trtllm-serve.nix
nix/openai-proxy-hs/: ChatTemplate.hs  openai-proxy-hs.cabal
nix/scripts/: trtllm-build-engine.py
nix/trtllm-validate/: TrtllmValidate.hs  trtllm-validate.cabal
openai-proxy/: ChatTemplateTest.hs  OpenAIProxy.hs  ProxyPropTest.hs  openai-proxy.cabal
scripts/: convert-glm47-trtllm.py  quantize-glm47-nvfp4.py  trtllm-download-model.py  trtllm-sanity-check.py
tool-server/: API.hs  Server.hs  tool-server.cabal
tool-server/API/: Types.hs
tool-server/lib/: Attestation.hs  Box.hs  CAS.hs
tool-server/test/: BoxTest.hs  Test.hs
trtllm-validate/: TrtllmValidateTest.hs  trtllm-validate.cabal
