cabal-version: 2.4
name:           openai-proxy
version:       0.1.0
synopsis:      OpenAI-compatible proxy for TensorRT-LLM
license:       MIT
author:        nvidia-sdk
build-type:    Simple

library
  exposed-modules:  ChatTemplate
  build-depends:
    , base            >= 4.14 && < 5
    , megaparsec      >= 9.0
    , text            >= 1.2
  default-language: Haskell2010
  ghc-options:      -Wall -O2

executable openai-proxy-hs
  main-is:          OpenAIProxy.hs
  build-depends:
    , aeson           >= 2.0
    , base            >= 4.14 && < 5
    , bytestring      >= 0.10
    , http-client     >= 0.7
    , http-client-tls >= 0.3
    , http-types      >= 0.12
    , megaparsec      >= 9.0
    , openai-proxy
    , stm             >= 2.5
    , text            >= 1.2
    , time            >= 1.9
    , uuid            >= 1.3
    , wai             >= 3.2
    , warp            >= 3.3
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"

executable chat-template-test
  main-is:          ChatTemplateTest.hs
  build-depends:
    , base            >= 4.14 && < 5
    , megaparsec      >= 9.0
    , openai-proxy
    , text            >= 1.2
  default-language: Haskell2010
  ghc-options:      -Wall -O2

test-suite proxy-proptest
  type:             exitcode-stdio-1.0
  main-is:          ProxyPropTest.hs
  build-depends:
    , aeson           >= 2.0
    , async           >= 2.2
    , base            >= 4.14 && < 5
    , bytestring      >= 0.10
    , http-client     >= 0.7
    , http-types      >= 0.12
    , process         >= 1.6
    , QuickCheck      >= 2.14
    , text            >= 1.2
    , time            >= 1.9
    , vector          >= 0.12
    , wai             >= 3.2
    , warp            >= 3.3
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
