cabal-version:      2.4
name:               trtllm-validate
version:            0.1.0
synopsis:           TensorRT-LLM engine validation tool
description:        Proper Haskell CLI for validating TRT-LLM engine builds.
                    Replaces shell heredocs with type-safe JSON parsing.
license:            MIT
author:             Weyl AI
category:           CLI
build-type:         Simple

executable trtllm-validate
  main-is:          TrtllmValidate.hs
  build-depends:
    , aeson          >= 2.0
    , base           >= 4.16 && < 5
    , bytestring     >= 0.11
    , directory      >= 1.3
    , filepath       >= 1.4
    , text           >= 2.0
  default-language: GHC2021
  ghc-options:      -Wall -O2
